--- a/src/main/resources/templates/checkoutform.html
+++ b/src/main/resources/templates/checkoutform.html
@@ -29,7 +29,7 @@
 
                 <span class="help-block" th:if="${#fields.hasErrors('firstName')}">
                        <ul>
-                           <li th:each="err : ${#fields.errors('firstName')}" th:text="${err}" />
+                           <li th:each="err : ${#fields.errors('firstName')}" th:text="${err}"></li>
                        </ul>
                 </span>
             </div>
@@ -42,7 +42,7 @@
 
                 <span class="help-block" th:if="${#fields.hasErrors('lastName')}">
                        <ul>
-                           <li th:each="err : ${#fields.errors('lastName')}" th:text="${err}" />
+                           <li th:each="err : ${#fields.errors('lastName')}" th:text="${err}"></li>
                        </ul>
                 </span>
             </div>
@@ -55,7 +55,7 @@
 
                 <span class="help-block" th:if="${#fields.hasErrors('addressLine1')}">
                        <ul>
-                           <li th:each="err : ${#fields.errors('addressLine1')}" th:text="${err}" />
+                           <li th:each="err : ${#fields.errors('addressLine1')}" th:text="${err}"></li>
                        </ul>
                 </span>
             </div>
@@ -68,7 +68,7 @@
 
                 <span class="help-block" th:if="${#fields.hasErrors('addressLine2')}">
                        <ul>
-                           <li th:each="err : ${#fields.errors('addressLine2')}" th:text="${err}" />
+                           <li th:each="err : ${#fields.errors('addressLine2')}" th:text="${err}"></li>
                        </ul>
                 </span>
             </div>
@@ -81,7 +81,7 @@
 
                 <span class="help-block" th:if="${#fields.hasErrors('city')}">
                        <ul>
-                           <li th:each="err : ${#fields.errors('city')}" th:text="${err}" />
+                           <li th:each="err : ${#fields.errors('city')}" th:text="${err}"></li>
                        </ul>
                 </span>
             </div>
@@ -94,7 +94,7 @@
 
                 <span class="help-block" th:if="${#fields.hasErrors('stateCode')}">
                        <ul>
-                           <li th:each="err : ${#fields.errors('stateCode')}" th:text="${err}" />
+                           <li th:each="err : ${#fields.errors('stateCode')}" th:text="${err}"></li>
                        </ul>
                 </span>
             </div>
@@ -107,7 +107,7 @@
 
                 <span class="help-block" th:if="${#fields.hasErrors('zipCode')}">
                        <ul>
-                           <li th:each="err : ${#fields.errors('zipCode')}" th:text="${err}" />
+                           <li th:each="err : ${#fields.errors('zipCode')}" th:text="${err}"></li>
                        </ul>
                 </span>
             </div>
